[package]
name = "crypto"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.26"
hex = "0.4.2"
serde = { version = "1", features = [ "derive" ] }
exonum_sodiumoxide = { version = "0.0.24", optional = true }
proto = { path = "../proto", version = "1.0.0", optional = true }
protobuf = { version = "3", optional = true }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.2"

[build-dependencies]
construct = { version = "1.0.0", path = "../construct" }
