[package]
name = "proto"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.13"
bit-vec = "0.6"
protobuf = "3"
protobuf-convert = "0.5"
serde = { version = "1", features = [ "derive" ] }
time = { version = "0.3", features = [ "serde" ] }

[dev-dependencies]
rand = "0.8"
serde_json = "1"

[build-dependencies]
construct = { version = "1.0.0", path = "../construct" }
